# wt

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Cross.toml  Justfile  LICENSE  README.md  RELEASING.md  build.rs  hk.pkl  lefthook.yml  mise.toml  release-plz.toml  spec.md
.cargo/: config.toml  mutants.toml
.github/homebrew/: wt.rb
.github/workflows/: ci.yml  mutants.yml  release-plz.yml
src/: cli.rs  copy.rs  cx.rs  error.rs  hooks.rs  keys.rs  lib.rs  main.rs  model.rs  query.rs  slug.rs  template.rs  testutil.rs  time.rs  version.rs  worktree_service.rs
src/agent/: mod.rs  model.rs  spec.rs  types.rs
src/commands/: checkout.rs  complete.rs  completions.rs  config_cmd.rs  drop.rs  init.rs  list.rs  mod.rs  new.rs  path.rs  pr.rs  pr_open.rs  prune.rs  remove.rs  root.rs  shell_init.rs  staleness.rs  status_cmd.rs  switch.rs  sync.rs
src/config/: mod.rs  parse.rs  schema.rs  wtconfig.rs
src/gh/: mod.rs  types.rs
src/git/: aheadbehind.rs  cli.rs  commit.rs  discover.rs  mod.rs  ops.rs  porcelain.rs  refs.rs  status.rs  submodule.rs  worktrees.rs
src/output/: color.rs  json.rs  mod.rs  pager.rs  render.rs  table.rs
src/tui/: app.rs  event.rs  glyphs.rs  hints.rs  mod.rs  options.rs  runtime.rs  terminal.rs  theme.rs  view.rs
src/tui/runtime/: effects.rs  mod.rs
src/tui/view/: detail.rs  list.rs  mod.rs  modals.rs
src/util/: editor.rs  fuzzy.rs  mod.rs
