[package]
name = "wt"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "cargo", "wrap_help"] }
clap_complete = "4.6.5"
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
directories = "6.0.0"
eyre = "0.6.12"
futures-util = "0.3.32"
gix = "0.84.0"
globset = "0.4.18"
jiff = "0.2.28"
nucleo-matcher = "0.3.1"
ratatui = "0.30.0"
sendit = { git = "ssh://git@github.com/getkono/sendit.git", rev = "a7ca12a62d8526dd819aee6298f1d5954784f6f9" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
shell-words = "1.1.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
toml_edit = "0.25.12"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[build-dependencies]
jiff = "0.2.28"

[dev-dependencies]
assert_cmd = "2.2.2"
insta = "1.47.2"
predicates = "3.1.4"
tempfile = "3.27.0"
