[package]
name = "wt"
version = "1.2.0"
edition = "2024"
description = "A single-binary CLI + TUI for managing Git worktrees and their GitHub pull requests."
authors = ["Justin Chung"]
license = "MIT"
repository = "https://github.com/getkono/wt"
homepage = "https://github.com/getkono/wt"
readme = "README.md"
keywords = ["git", "worktree", "cli", "tui", "productivity"]
categories = ["command-line-utilities", "development-tools"]
# crates.io publishing is disabled in release-plz.toml (`publish = false`) because the
# crate name `wt` is still taken — see RELEASING.md. Do NOT set `publish = false` here:
# that marks the package fully private and release-plz then refuses to cut the tag
# ("nothing to release"); the release-plz.toml knob skips `cargo publish` while still
# cutting the tag + GitHub Release. This `exclude` keeps the crate ready for crates.io
# once the name is settled.
exclude = [
    "/.github",
    "/AGENTS.md",
    "/CLAUDE.md",
    "/CHANGELOG.md",
    "/Cross.toml",
    "/RELEASING.md",
    "/hk.pkl",
    "/mise.toml",
    "/release-plz.toml",
    "/mutants.out",
    "/mutants.out.old",
]

[dependencies]
clap = { version = "4.6.1", features = ["derive", "cargo", "wrap_help"] }
clap_complete = "4.6.5"
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
directories = "6.0.0"
eyre = "0.6.12"
futures-util = "0.3.32"
gix = "0.84.0"
globset = "0.4.18"
jiff = "0.2.28"
nucleo-matcher = "0.3.1"
ratatui = "0.30.0"
sendit = "0.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
shell-words = "1.1.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
toml_edit = "0.25.12"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[build-dependencies]
jiff = "0.2.28"

[dev-dependencies]
assert_cmd = "2.2.2"
insta = "1.47.2"
predicates = "3.1.4"
tempfile = "3.27.0"
