[package]
name = "kono-wt"
version = "1.2.0"
edition = "2024"
description = "A single-binary CLI + TUI for managing Git worktrees and their GitHub pull requests."
authors = ["Justin Chung"]
license = "MIT"
repository = "https://github.com/getkono/wt"
homepage = "https://github.com/getkono/wt"
readme = "README.md"
keywords = ["git", "worktree", "cli", "tui", "productivity"]
categories = ["command-line-utilities", "development-tools"]
# Published to crates.io as `kono-wt`: the bare `wt` name is an unrelated 2020
# placeholder (see RELEASING.md). The library and binary targets below are both
# named `wt`, so the public API is still imported as `wt::…` and `cargo install
# kono-wt` still produces a `wt` binary — only the crates.io package name differs.
# `exclude` keeps dev/CI-only files out of the published tarball.
exclude = [
    "/.github",
    "/AGENTS.md",
    "/CLAUDE.md",
    "/CHANGELOG.md",
    "/Cross.toml",
    "/RELEASING.md",
    "/hk.pkl",
    "/mise.toml",
    "/release-plz.toml",
    "/mutants.out",
    "/mutants.out.old",
]

# Keep the library importable as `wt`. Without this the package rename to
# `kono-wt` would make the lib crate `kono_wt` and break `src/main.rs`'s `use wt::…`.
[lib]
name = "wt"
path = "src/lib.rs"

# Ship the binary as `wt`, independent of the crates.io package name.
[[bin]]
name = "wt"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "cargo", "wrap_help"] }
clap_complete = "4.6.5"
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
directories = "6.0.0"
eyre = "0.6.12"
futures-util = "0.3.32"
gix = "0.84.0"
globset = "0.4.18"
jiff = "0.2.28"
nucleo-matcher = "0.3.1"
ratatui = "0.30.0"
sendit = "0.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
shell-words = "1.1.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
toml_edit = "0.25.12"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[build-dependencies]
jiff = "0.2.28"

[dev-dependencies]
assert_cmd = "2.2.2"
insta = "1.47.2"
predicates = "3.1.4"
tempfile = "3.27.0"
